# src/services/reverseGeocoding/dtos/LocationDto.ts
@@ -1,0 +1,7 @@
+export class LocationDto{
+    latitude:number;
+    longitude:number;
+    city:string;
+    country:string;
+    countryCode:string;
+}
